[package]
name = "readradar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.23.0", features = ["all-widgets"]}
fffx = "0.1.3"
flate2 = "1.0.27"
# bevy_ecs = "0.11.3"
# bevy_app = "0.11.3"